log
Sat, May  3, 2025  5:49:11 PM: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
5729e4d
Sat, May  3, 2025  6:23:17 PM: 
 treemap.c | 37 ++++++++++++++++++++++++++++++++++++-
 1 file changed, 36 insertions(+), 1 deletion(-)
 tests:  6|6
total_score: 15/70
47587b4
Sat, May  3, 2025  6:26:39 PM: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:113:23: error: 'NUll' undeclared (first use in this function)
     while (current != NUll)
                       ^~~~
treemap.c:113:23: note: each undeclared identifier is reported only once for each function it appears in
074e8ed
Sat, May  3, 2025  6:27:01 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
5d4f459
Sat, May  3, 2025  6:33:12 PM: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
011a154
Sat, May  3, 2025  6:34:47 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|4
total_score: 25/70
4fe2369
Sat, May  3, 2025  7:45:47 PM: 
 treemap.c | 51 +++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 51 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:110:13: error: statement with no effect [-Werror=unused-value]
             free
             ^~~~
treemap.c:111:9: error: expected ';' before '}' token
         }
         ^
treemap.c:129:13: error: expected '}' before 'else'
             else {}
             ^~~~
treemap.c: At top level:
treemap.c:150:9: error: expected identifier or '(' before '}' token
         }
         ^
treemap.c:151:5: error: expected identifier or '(' before '}' token
     }
     ^
cc1.exe: all warnings being treated as errors
dc65503
Sat, May  3, 2025  7:46:59 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:110:13: error: statement with no effect [-Werror=unused-value]
             free
             ^~~~
treemap.c:111:9: error: expected ';' before '}' token
         }
         ^
treemap.c:129:13: error: expected '}' before 'else'
             else {
             ^~~~
treemap.c: At top level:
treemap.c:151:5: error: expected identifier or '(' before '}' token
     }
     ^
cc1.exe: all warnings being treated as errors
1024b73
Sat, May  3, 2025  7:48:55 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:110:13: error: statement with no effect [-Werror=unused-value]
             free
             ^~~~
treemap.c:111:9: error: expected ';' before '}' token
         }
         ^
cc1.exe: all warnings being treated as errors
37fe23a
Sat, May  3, 2025  7:58:44 PM: 
 treemap.c | 18 +++++++++++++-----
 1 file changed, 13 insertions(+), 5 deletions(-)
Compilation failed
test.c: In function 'removeNode':
test.c:503:5: error: 'main' is normally a non-static function [-Werror=main]
 int main( int argc, char *argv[] ) {
     ^~~~
test.c:606:1: error: expected declaration or statement at end of input
 }
 ^
At top level:
test.c:503:5: error: 'main' defined but not used [-Werror=unused-function]
 int main( int argc, char *argv[] ) {
     ^~~~
cc1.exe: all warnings being treated as errors
72aab8e
Sat, May  3, 2025  7:59:06 PM: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|4
total_score: 30/70
2d57a0f
Sat, May  3, 2025  8:02:02 PM: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  18|3
total_score: 40/70
b7b94d5
Sat, May  3, 2025  8:11:04 PM: 
 treemap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
 tests:  18|3
total_score: 40/70
1269b18
Sat, May  3, 2025  8:12:44 PM: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  22|2
total_score: 50/70
4b295a4
Sat, May  3, 2025  8:19:50 PM: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
Compilation failed
In file included from test.c:4:0:
treemap.c: In function 'firstTreeMap':
treemap.c:223:15: error: unused variable 'minNode' [-Werror=unused-variable]
     TreeNode* minNode = minimum(tree->root);
               ^~~~~~~
cc1.exe: all warnings being treated as errors
02550da
